用户页面构造成功

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
                         <span id="user-name">zzz</span>
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">Your Profile</a></dd>
-                        <dd><a href="">Settings</a></dd>
+                        <dd><a href="./user/user.html" target="fm">个人中心</a></dd>
+                        <dd><a href="./user/psw.html" target="fm">更改密码</a></dd>
+                        <dd><a href="./user/avatar.html" target="fm">更换头像</a></dd>
                         <dd><a href="javascript:;" id="btn-out">退出</a></dd>
                     </dl>
                 </li>
@@ -44,9 +45,10 @@
             <div class="layui-side-scroll">
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <div class="avatar">
-                    <div class="avatar-use"><img
-                            src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
-                            class="layui-nav-img"></div>
+                    <div class="avatar-use">
+                        <img src="//tva1.sinaimg.cn/crop.0.0.118.118.180/5db11ff4gw1e77d3nqrv8j203b03cweg.jpg"
+                            class="layui-nav-img">
+                    </div>
                     <div class="avatar-auto">A</div>
                     <span id="welcome">你好，***</span>
                 </div>
@@ -64,9 +66,12 @@
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                            <dd><a href=""><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                            <dd><a href="./user/user.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a>
+                            </dd>
+                            <dd><a href="./user/avatar.html" target="fm"><i
+                                        class="layui-icon layui-icon-app"></i>更换头像</a></dd>
+                            <dd><a href="./user/psw.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a>
+                            </dd>
                         </dl>
                     </li>
 
