--- a/user/psw.html
+++ b/user/psw.html
@@ -19,21 +19,21 @@
                 <div class="layui-form-item">
                     <label class="layui-form-label">原密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="oldPsw" required lay-verify="required|psw" placeholder="请输入原密码"
+                        <input type="password" name="oldPwd" required lay-verify="required|psw" placeholder="请输入原密码"
                             autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">新密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="newPsw" required lay-verify="required|psw|samePsw"
+                        <input type="password" name="newPwd" required lay-verify="required|psw|samePsw"
                             placeholder="请输入新密码" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
                     <label class="layui-form-label">确认新密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="rePsw" required lay-verify="required|psw|rePsw"
+                        <input type="password" name="rePwd" required lay-verify="required|psw|rePsw"
                             placeholder="请再次输入新密码" autocomplete="off" class="layui-input">
                     </div>
                 </div>
@@ -48,7 +48,6 @@
     </div>
 
     <script src="../assets/lib/layui/layui.all.js"></script>
-
     <script src="../assets/lib/jquery.js"></script>
     <script src="../assets/js/baseAPI.js"></script>
     <script src="../assets/js/user/user-psw.js"></script>
